--- a/atleti.html
+++ b/atleti.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="">
 
 <!-- Favicons -->
-<link href="assets/img/favicon.png" rel="icon">
+<link href="assets/img/favicom.png" rel="icon">
 <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 <!-- Fonts -->
@@ -80,9 +80,8 @@
 			<div class="container" data-aos="fade-up" data-aos-delay="100">
 				<div class="swiper init-swiper">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide">
+												<div class="swiper-slide"style="background-image: url('/assets/img/background.png');"></div>
 
-						</div>
 					</div>
 				</div>
 			</div>
@@ -108,13 +107,13 @@
 						width="250" alt="" />
 				</div>
 				<div class="slide">
-				<a href="/archivio/2024/sponsor/gangeritravel.html" target="_blank">
+				<a href="/atleticabrothers/archivio/2024/sponsor/gangeritravel.html" target="_blank">
 					<img src="assets/img/sponsor/gangeritravel.png" height="100"
 						width="250" alt="" />
 						</a>
 				</div>
 				<div class="slide">
-				<a href="/archivio/2024/sponsor/grancaffe.html" target="_blank">
+				<a href="/atleticabrothers/archivio/2024/sponsor/grancaffe.html" target="_blank">
 					<img src="assets/img/sponsor/grancaffe.png" height="100"
 						width="250" alt="" />
 						</a>
@@ -489,7 +488,7 @@
 						<div class="blog-author-widget-2 widget-item">
 
 							<div class="d-flex flex-column align-items-center">
-								<img src="/assets/img/favicon.png"
+								<img src="/assets/img/favicom.png"
 									class="rounded-circle flex-shrink-0" alt="">
 								<h4>Atletica Brothers</h4>
 								<div style= "text-align: left; " >
