--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 					<div class="swiper-wrapper">
 
-						<div class="swiper-slide"style="background-image: url('/assets/img/background.png');"></div>
+						<div class="swiper-slide"style="background-image: url('/atleticabrothers/assets/img/background.png');"></div>
 
 						</div>
 
