--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta name="keywords" content="">
 
 <!-- Favicons -->
-<link href="assets/img/favicom.png" rel="icon">
-<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="/atleticabrothers/assets/img/favicom.png" rel="icon">
+<link href="/atleticabrothers/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -350,7 +350,7 @@
 						<div class="blog-author-widget-2 widget-item">
 
 							<div class="d-flex flex-column align-items-center">
-								<img src="/assets/img/favicom.png"
+								<img src="/atleticabrothers//assets/img/favicom.png"
 									class="rounded-circle flex-shrink-0" alt="">
 								<h4>Atletica Brothers</h4>
 								<div style= "text-align: left; " >
