--- a/organigramma.html
+++ b/organigramma.html
@@ -9,8 +9,8 @@
 <meta name="keywords" content="">
 
 <!-- Favicons -->
-<link href="assets/img/favicom.png" rel="icon">
-<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="/atleticabrothers/assets/img/favicom.png" rel="icon">
+<link href="/atleticabrothers/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -83,7 +83,7 @@
 
 					<div class="swiper-wrapper">
 
-												<div class="swiper-slide"style="background-image: url('/assets/img/background.png');"></div>
+												<div class="swiper-slide"style="background-image: url('/atleticabrothers/assets/img/background.png');"></div>
 
 
 
@@ -220,7 +220,7 @@
 						<div class="blog-author-widget-2 widget-item">
 
 							<div class="d-flex flex-column align-items-center">
-								<img src="/assets/img/favicom.png"
+								<img src="/atleticabrothers//assets/img/favicom.png"
 									class="rounded-circle flex-shrink-0" alt="">
 								<h4>Atletica Brothers</h4>
 								<div style= "text-align: left; " >
@@ -239,7 +239,7 @@
 							<h3 class="widget-title">Locandina</h3>
 							<div class="gallery-item h-100">
 								<a href="#demo-modal" title="locandina" class="glightbox preview-link"> 
-								<img src="assets/img/locandina.jpg" alt="" class="img-fluid" />
+								<img src="/atleticabrothers/assets/img/locandina.jpg" alt="" class="img-fluid" />
 								</a> 
 							</div>
 							<div id="demo-modal" class="modal">
